# rezipe

./: .gitignore  LICENSE  README.md  pyproject.toml  pyproject_poetry.toml
interface design/: bbq_rib.py  kaijiew.py  miso_soup.py  miso_soup_with_declare.py  pan_pizza.py  ultis_sauce.py  ข้าวคุณหมอ.ipynb  ข้าวคุณหมอ.py  ยำไข่หวาน.py
rezipe/: __about__.py  __init__.py  diagram.py  downloader.py  fb.json  goods.py  ingredient.py  mix.py  pint_currency.txt  treatment.py  unit.py  utils_jupyter.py  video2rezipe.py  video2rezipeGGA.py
tests/: __init__.py
